Base version done :), probably needs more testing